controller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: namespace-controller-ingress
  namespace: encendido-eks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: namespace-controller.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: namespace-scaler-service
                port:
                  number: 8081
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: namespace-scaler-service
                port:
                  number: 8081
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: namespace-scaler-service
                port:
                  number: 8081
